# ag_data_viz

./: README.md  climate_data_ingest.ipynb  data_exploration.ipynb  data_processing.ipynb  images_draft.ipynb  images_draft_10_18.ipynb  images_draft_final_v2.ipynb  proposal.md  pyproject.toml
data/: data_processing_final.ipynb
src/: images_draft_final_v3.ipynb
static_draft/: about.md  images_draft_10_18.ipynb
