[tool.poetry]
name = "ag-data-viz"
version = "0.1.0"
description = ""
authors = ["jacobtrout <troutjacobm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
altair = "^5.4.1"
requests = "^2.32.3"
matplotlib = "^3.9.2"
geopandas = "^1.0.1"
vl-convert-python = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
